[package]
name = "hook-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi", "winnt", "libloaderapi"] }
once_cell = "1.9.0"
ntapi = "0.3.7"
anyhow = "1.0.54"
nasm-rs = "0.2.4"